; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/deps/cifra/src/arm/extr_semihost.c_reset_cycles.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/deps/cifra/src/arm/extr_semihost.c_reset_cycles.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64, i32 }

@STCTRL_MAX = common dso_local global i32 0, align 4
@SysTick = common dso_local global %struct.TYPE_2__* null, align 8
@STCTRL_SYSCLOCK = common dso_local global i32 0, align 4
@STCTRL_TICKINT = common dso_local global i32 0, align 4
@STCTRL_ENABLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @reset_cycles() #0 {
  %1 = load i32, i32* @STCTRL_MAX, align 4
  %2 = load %struct.TYPE_2__*, %struct.TYPE_2__** @SysTick, align 8
  %3 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %2, i32 0, i32 2
  store i32 %1, i32* %3, align 8
  %4 = load i32, i32* @STCTRL_SYSCLOCK, align 4
  %5 = load i32, i32* @STCTRL_TICKINT, align 4
  %6 = or i32 %4, %5
  %7 = load i32, i32* @STCTRL_ENABLE, align 4
  %8 = or i32 %6, %7
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @SysTick, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 8
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** @SysTick, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 1
  store i64 0, i64* %12, align 8
  %13 = call i32 (...) @reset_ticks()
  %14 = call i32 (...) @get_ticks()
  ret i32 %14
}

declare dso_local i32 @reset_ticks(...) #1

declare dso_local i32 @get_ticks(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
